fixed button color on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,7 @@ button {
   border: 2px solid #191414;
   width: 115px;
   height: 40px;
+  background: white;
 }
 
 @-webkit-keyframes AnimationName {
